# FriendlySnek

./: .gitignore  LICENSE  LICENSE.md  README.md  TEST.py  a.txt  anvilController.py  anvilStats.py  gatekeepers.md  logger.py  main.py  messageAnalysis.py  pyproject.toml  requirements.txt  scheduleCthulhu.py  todo.txt  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cogs/: botTasks.py  bottasks.py  buttonRoles.py  changeTimeZone.py  dynamicVoice.py  embedBuilder.py  jokes.py  justBob.py  missionUploader.py  poll.py  recognition.py  reload.py  schedule.py  snekcoin.py  spreadsheet.py  staff.py  test.py  workshopInterest.py
cogs/justBob/: levels.json  wipLevels.json
constants/: __init__.py  channels.py  config.py  constants.py  debug.py  emojis.py  members.py  misc.py  opAdjectives.txt  opNouns.txt  roles.py
flaskapp/: schedule.py
flaskapp/static/: event.js
flaskapp/templates/: event.html  shutdown.html  test.html
